8299959: C2: CmpU::Value must filter overflow computation against local sub computation

Backport-of: 5f66024e957e5e40ce8d5a65717ea7f82c9f0b8f